# mixes-rating-cli

./: Cargo.toml  rustfmt.toml
src/: commands.rs  main.rs  queries.rs
src/commands/: add_user.rs  help.rs  mod.rs  rank_by_win_rate.rs  update.rs  win_rate.rs
